==> yearnext/ysf/bsp/stm32f10x/map/map_uart.c <==
#include "stm32f10x.h"
#include "comm_path.h"
#include "map_uart.h"
#include "map_gpio.h"
#define IS_UART_PORT_INVAILD(n) ((n) >= _dimof(Uart))

hal_err_t Map_Uart_Open(uint8_t port)
{
    hal_assert(IS_UART_PORT_INVAILD(port));
    
    if (port == MCU_UART_1)
    {
        RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART1, ENABLE);
    }
    else if (port == MCU_UART_2)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART2, ENABLE);
    }
    else if (port == MCU_UART_3)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART3, ENABLE);
    }    
    else if (port == MCU_UART_4)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1Periph_UART4, ENABLE);
    }    
    else
    { 
        RCC_APB1PeriphClockCmd(RCC_APB1Periph_UART5, ENABLE);
    }
    
	return HAL_ERR_NONE;
}

hal_err_t Map_Uart_Close(uint8_t port)
{
    hal_assert(IS_UART_PORT_INVAILD(port));
    
    if (port == MCU_UART_1)
    {
        RCC_APB2PeriphResetCmd(RCC_APB2Periph_USART1, ENABLE);
        RCC_APB2PeriphResetCmd(RCC_APB2Periph_USART1, DISABLE);
    }
    else if (port == MCU_UART_2)
    {
        RCC_APB1PeriphResetCmd(RCC_APB1Periph_USART2, ENABLE);
        RCC_APB1PeriphResetCmd(RCC_APB1Periph_USART2, DISABLE);
    }
    else if (port == MCU_UART_3)
    {
        RCC_APB1PeriphResetCmd(RCC_APB1Periph_USART3, ENABLE);
        RCC_APB1PeriphResetCmd(RCC_APB1Periph_USART3, DISABLE);
    }    
    else if (port == MCU_UART_4)
    {
        RCC_APB1PeriphResetCmd(RCC_APB1Periph_UART4, ENABLE);
        RCC_APB1PeriphResetCmd(RCC_APB1Periph_UART4, DISABLE);
    }    
    else
    { 
        RCC_APB1PeriphResetCmd(RCC_APB1Periph_UART5, ENABLE);
        RCC_APB1PeriphResetCmd(RCC_APB1Periph_UART5, DISABLE);
    }
      
	return HAL_ERR_NONE;
}

__STATIC_INLINE
void _Uart_Port_Switch(struct HalUartDevice *dev)
{
    switch (dev->Port)
    {
        case MCU_UART_1:
            if (dev->Group == 0)
            {
                GPIO_PinRemapConfig(GPIO_Remap_USART1, DISABLE);
            }
            else
            {
                GPIO_PinRemapConfig(GPIO_Remap_USART1, ENABLE);
            }
            break;
        case MCU_UART_2:
            if (dev->Group == 0)
            {
                GPIO_PinRemapConfig(GPIO_Remap_USART2, ENABLE);
            }
            else
            {
                GPIO_PinRemapConfig(GPIO_Remap_USART2, DISABLE);
            }
            break;
        case MCU_UART_3:
            if (dev->Group == 0)
            {
                GPIO_PinRemapConfig(GPIO_PartialRemap_USART3, DISABLE);
                GPIO_PinRemapConfig(GPIO_FullRemap_USART3, DISABLE);
            }
            else if (dev->Group == 1)
            {
                GPIO_PinRemapConfig(GPIO_FullRemap_USART3, DISABLE);
                GPIO_PinRemapConfig(GPIO_PartialRemap_USART3, ENABLE);
            }
            else
            {
                GPIO_PinRemapConfig(GPIO_PartialRemap_USART3, DISABLE);
                GPIO_PinRemapConfig(GPIO_FullRemap_USART3, ENABLE);
            }
            break;
        default:
            break;
    }
}

__STATIC_INLINE
void _Uart_GPIO_Init(struct HalUartDevice *dev)
{
    struct HalGPIODevice TxPort;
    struct HalGPIODevice RxPort;
    
    TxPort.IO = GPIO_HS_OUTPUT;
    TxPort.Mode = GPIO_AF_PUSH_PULL_MODE;

    RxPort.IO = GPIO_HS_OUTPUT;
    RxPort.Mode = GPIO_PULL_UP_DOWN_MODE;
                    
    switch (dev->Port)
    {
        case MCU_UART_1:
            if (dev->Group == 0)
            {
                TxPort.Port = MCU_PORT_A;
                TxPort.Pin  = MCU_PIN_9;
                
                RxPort.Port = MCU_PORT_A;  
                RxPort.Pin  = MCU_PIN_10;
            }
            else
            {
                TxPort.Port = MCU_PORT_B;
                TxPort.Pin  = MCU_PIN_6;
                
                RxPort.Port = MCU_PORT_B;  
                RxPort.Pin  = MCU_PIN_7;
            }
            break;
        case MCU_UART_2:
            if (dev->Group == 0)
            {
                TxPort.Port = MCU_PORT_A;
                TxPort.Pin  = MCU_PIN_2;
                
                RxPort.Port = MCU_PORT_A;  
                RxPort.Pin  = MCU_PIN_3;
            }
            else
            {
                TxPort.Port = MCU_PORT_D;
                TxPort.Pin  = MCU_PIN_5;
                
                RxPort.Port = MCU_PORT_D;  
                RxPort.Pin  = MCU_PIN_6;
            }
            break;
        case MCU_UART_3:
            if (dev->Group == 0)
            {
                TxPort.Port = MCU_PORT_B;
                TxPort.Pin  = MCU_PIN_10;
                
                RxPort.Port = MCU_PORT_B;  
                RxPort.Pin  = MCU_PIN_11;
            }
            else if (dev->Group == 1)
            {
                TxPort.Port = MCU_PORT_C;
                TxPort.Pin  = MCU_PIN_10;
                
                RxPort.Port = MCU_PORT_C;  
                RxPort.Pin  = MCU_PIN_11;
            }
            else
            {
                TxPort.Port = MCU_PORT_D;
                TxPort.Pin  = MCU_PIN_8;
                
                RxPort.Port = MCU_PORT_D;  
                RxPort.Pin  = MCU_PIN_9;
            }
            break;
        default:
            break;
    }
    
    Hal_GPIO_Open(&TxPort);
    Hal_GPIO_Init(&TxPort);
    
    Hal_GPIO_Open(&RxPort);
    Hal_GPIO_Init(&RxPort);
    
    _Uart_Port_Switch(dev);
}

hal_err_t Map_Uart_Init(uint8_t port, struct HalUartDevice *dev)
{
    hal_assert(IS_UART_PORT_INVAILD(port));
    hal_assert(IS_PTR_NULL(config));
    
    USART_InitTypeDef USART_InitStructure;
    NVIC_InitTypeDef NVIC_InitStructure;
    
    //< init uart gpio
    _Uart_GPIO_Init(dev);
    
    //< init uart baud rate
	USART_InitStructure.USART_BaudRate = dev->Baud;
    
    //< init uart word len
    if(dev->WordLen == MCU_UART_WORD_LEN_8B)
    {
        USART_InitStructure.USART_WordLength = USART_WordLength_8b;
    }
    else
    {
        USART_InitStructure.USART_WordLength = USART_WordLength_9b;
    }
    
    //< set uart stop bits
    if(dev->StopBits == MCU_UART_STOP_BITS_0_5)
    {
        USART_InitStructure.USART_StopBits = USART_StopBits_0_5;
    }
    else if(dev->StopBits == MCU_UART_STOP_BITS_1)
    {
        USART_InitStructure.USART_StopBits = USART_StopBits_1;
    }
    else if(dev->StopBits == MCU_UART_STOP_BITS_1_5)
    {
        USART_InitStructure.USART_StopBits = USART_StopBits_1_5;
    }
    else
    {
        USART_InitStructure.USART_StopBits = USART_StopBits_2;
    }
    
    //< set uart parity
	if(dev->Parity == MCU_UART_PARTY_NONE)
    {
        USART_InitStructure.USART_Parity = USART_Parity_No;
    }
    else if(dev->Parity == MCU_UART_PARTY_EVEN)
    {
        USART_InitStructure.USART_Parity = USART_Parity_Even;
    }
    else
    {
        USART_InitStructure.USART_Parity = USART_Parity_Odd;
    }
    
    //< set uart tx state
    if(dev->IsEnableTx == true)
    {
        USART_InitStructure.USART_Mode    = USART_Mode_Tx;
    }
    
    //< set uart rx state
    if(dev->IsEnableRx == true)
    {
        USART_InitStructure.USART_Mode   |= USART_Mode_Rx;
    }

    //< disable hardware flow control
    USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;

    //< config uart call back
    UartTxCallback[port].Callback = dev->TxCallback.Callback;
    UartTxCallback[port].Param    = dev->TxCallback.Param;
    UartRxCallback[port].Callback = dev->RxCallback.Callback;
    UartRxCallback[port].Param    = dev->RxCallback.Param;
    
    //< init uart
    USART_DeInit(Uart[port]);
    USART_Init(Uart[port], &USART_InitStructure);
    
    USART_ClearITPendingBit(Uart[port], USART_IT_TC);
    USART_ITConfig(Uart[port], USART_IT_TC, ENABLE);
    
    USART_ClearITPendingBit(Uart[port], USART_IT_RXNE);
    USART_ITConfig(Uart[port], USART_IT_RXNE, ENABLE);
    	
    NVIC_InitStructure.NVIC_IRQChannel = UartIrqn[port];
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 1;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);
    
    USART_Cmd(Uart[port], ENABLE);
    
    return HAL_ERR_NONE;
}
