==> yearnext/ysf/bsp/stm32f1xx/map/map_uart.c <==
#include "stm32f1xx.h"
#include "stm32f1xx_ll_usart.h"
#include "stm32f1xx_ll_rcc.h"
#include "stm32f1xx_ll_bus.h"
#include "stm32f1xx_ll_gpio.h"
#include "comm_path.h"
#include "map_uart.h"
#include "map_gpio.h"
#define IS_UART_PORT_INVAILD(n)                            ((n) >= _dimof(Uart))

void Map_Uart_Open(uint8_t port)
{
    hal_assert(IS_UART_PORT_INVAILD(port));

    if (port == MCU_UART_1)
    {
        LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_USART1);
    }
    else if (port == MCU_UART_2)
    {
        LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_USART2);
    }
    else if (port == MCU_UART_3)
    {
        LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_USART3);
    }    
    else if (port == MCU_UART_4)
    {
        LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_UART4);
    }    
    else
    { 
        LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_UART5);
    }
}

void Map_Uart_Close(uint8_t port)
{
    hal_assert(IS_UART_PORT_INVAILD(port));
    
    LL_USART_DeInit(Uart[port]);
}

__STATIC_INLINE
void _Uart_Port_Switch(uint8_t port, Hal_Uart_Handle *dev)
{
    switch (port)
    {
        case MCU_UART_1:
            if (dev->Group == 0)
            {
                LL_GPIO_AF_DisableRemap_USART1();
            }
            else
            {
                LL_GPIO_AF_EnableRemap_USART1();
            }
            break;
        case MCU_UART_2:
            if (dev->Group == 0)
            {
                LL_GPIO_AF_DisableRemap_USART2();
            }
            else
            {
                LL_GPIO_AF_EnableRemap_USART2();
            }
            break;
        case MCU_UART_3:
            if (dev->Group == 0)
            {
                LL_GPIO_AF_DisableRemap_USART3();
            }
            else if (dev->Group == 1)
            {
                LL_GPIO_AF_RemapPartial_USART3();
            }
            else
            {
                LL_GPIO_AF_EnableRemap_USART3();
            }
            break;
        default:
            break;
    }
}

__STATIC_INLINE
void _Uart_GPIO_Init(uint8_t port, Hal_Uart_Handle *dev)
{
    Hal_GPIO_Handle txPort;
    Hal_GPIO_Handle rxPort;

    txPort.Dir = GPIO_DIR_HS_OUTPUT;
    txPort.Mode = GPIO_AF_PUSH_PULL_MODE;

    rxPort.Dir = GPIO_DIR_INTPUT;
    rxPort.Mode = GPIO_PULL_UP_DOWN_MODE;
    
    switch (port)
    {
        case MCU_UART_1:
            if (dev->Group == 0)
            {
                txPort.Port = MCU_PORT_A;
                txPort.Pin  = MCU_PIN_9;
                
                rxPort.Port = MCU_PORT_A;  
                rxPort.Pin  = MCU_PIN_10;
            }
            else
            {
                txPort.Port = MCU_PORT_B;
                txPort.Pin  = MCU_PIN_6;
                
                rxPort.Port = MCU_PORT_B;  
                rxPort.Pin  = MCU_PIN_7;
            }
            break;
        case MCU_UART_2:
            if (dev->Group == 0)
            {
                txPort.Port = MCU_PORT_A;
                txPort.Pin  = MCU_PIN_2;
                
                rxPort.Port = MCU_PORT_A;  
                rxPort.Pin  = MCU_PIN_3;
            }
            else
            {
                txPort.Port = MCU_PORT_D;
                txPort.Pin  = MCU_PIN_5;
                
                rxPort.Port = MCU_PORT_D;  
                rxPort.Pin  = MCU_PIN_6;
            }
            break;
        case MCU_UART_3:
            if (dev->Group == 0)
            {
                txPort.Port = MCU_PORT_B;
                txPort.Pin  = MCU_PIN_10;
                
                rxPort.Port = MCU_PORT_B;  
                rxPort.Pin  = MCU_PIN_11;
            }
            else if (dev->Group == 1)
            {
                txPort.Port = MCU_PORT_C;
                txPort.Pin  = MCU_PIN_10;
                
                rxPort.Port = MCU_PORT_C;  
                rxPort.Pin  = MCU_PIN_11;
            }
            else
            {
                txPort.Port = MCU_PORT_D;
                txPort.Pin  = MCU_PIN_8;
                
                rxPort.Port = MCU_PORT_D;  
                rxPort.Pin  = MCU_PIN_9;
            }
            break;
        default:
            break;
    }
    
    map_gpio_api.Open(txPort.Port);
    map_gpio_api.Init(txPort.Port, txPort.Pin, txPort.Dir, txPort.Mode);
    
    map_gpio_api.Open(rxPort.Port);
    map_gpio_api.Init(rxPort.Port, rxPort.Pin, rxPort.Dir, rxPort.Mode);
    
    _Uart_Port_Switch(port, dev);
}

void Map_Uart_Init(uint8_t port, void *param)
{
    hal_assert(IS_UART_PORT_INVAILD(port));
    hal_assert(IS_PTR_NULL(config));
    
    LL_USART_InitTypeDef LL_USART_InitStructure;
    Hal_Uart_Handle *dev = (Hal_Uart_Handle *)param;
    
    //< init uart gpio
    _Uart_GPIO_Init(port, dev);
    
    //< init uart baud rate
    LL_USART_InitStructure.BaudRate = dev->Baud;
    
    //< init uart word len
    if(dev->WordLen == MCU_UART_WORD_LEN_8B)
    {
        LL_USART_InitStructure.DataWidth = LL_USART_DATAWIDTH_8B;
    }
    else
    {
        LL_USART_InitStructure.DataWidth = LL_USART_DATAWIDTH_9B;
    }
    
    //< set uart stop bits
    if(dev->StopBits == MCU_UART_STOP_BITS_0_5)
    {
        LL_USART_InitStructure.StopBits = LL_USART_STOPBITS_0_5;
    }
    else if(dev->StopBits == MCU_UART_STOP_BITS_1)
    {
        LL_USART_InitStructure.StopBits = LL_USART_STOPBITS_1;
    }
    else if(dev->StopBits == MCU_UART_STOP_BITS_1_5)
    {
        LL_USART_InitStructure.StopBits = LL_USART_STOPBITS_1_5;
    }
    else
    {
        LL_USART_InitStructure.StopBits = LL_USART_STOPBITS_2;
    }
    
    //< set uart parity
	if(dev->Parity == MCU_UART_PARTY_NONE)
    {
        LL_USART_InitStructure.Parity = LL_USART_PARITY_NONE;
    }
    else if(dev->Parity == MCU_UART_PARTY_EVEN)
    {
        LL_USART_InitStructure.Parity = LL_USART_PARITY_EVEN;
    }
    else
    {
        LL_USART_InitStructure.Parity = LL_USART_PARITY_ODD;
    }
    
    //< init uart mode
    LL_USART_InitStructure.TransferDirection = LL_USART_DIRECTION_NONE;

    //< set uart tx state
    if(dev->TxConfig != MCU_UART_DISABLE_TX)
    {
        LL_USART_InitStructure.TransferDirection = LL_USART_DIRECTION_TX;
    }
    
    //< set uart rx state
    if(dev->RxConfig == MCU_UART_DISABLE_RX)
    {
        LL_USART_InitStructure.TransferDirection   |= LL_USART_DIRECTION_RX;
    }

    //< disable hardware flow control
    LL_USART_InitStructure.HardwareFlowControl = LL_USART_HWCONTROL_NONE;

    //< config uart call back
    UartTxCallback[port].Callback = dev->TxCallback.Callback;
    UartTxCallback[port].Param    = dev->TxCallback.Param;
    UartRxCallback[port].Callback = dev->RxCallback.Callback;
    UartRxCallback[port].Param    = dev->RxCallback.Param;
    
    //< init uart
    LL_USART_DeInit(Uart[port]);
    LL_USART_Init(Uart[port], &LL_USART_InitStructure);
    
    if(dev->TxConfig == MCU_UART_ENABLE_TX_ISR)
    {
        LL_USART_ClearFlag_TC(Uart[port]);
        LL_USART_EnableIT_TC(Uart[port]);
    }
    
    if(dev->RxConfig == MCU_UART_ENABLE_RX_ISR)
    {
        LL_USART_ClearFlag_RXNE(Uart[port]);
        LL_USART_EnableIT_RXNE(Uart[port]);
    }
	
    NVIC_EnableIRQ(UartIrqn[port]); 
    NVIC_SetPriority(UartIrqn[port], dev->Priority);  
    
    LL_USART_Enable(Uart[port]);
}
